--- a/index.html
+++ b/index.html
@@ -302,6 +302,13 @@ DIV.Section1 {
 	  
 	  <div class="box" id="ProActiv" style="border-style: solid; border-width: 1px; padding: 5px 4px; display: none; background-color: rgb(255, 255, 255);">
      	 
+     I am a member of the <a href="http://cs.tau.ac.il/icore.html">Israeli Center of 
+Research Excellence in Algorithms</a> and <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for 
+Information Security</a><br><br>
+	 
+
+	 
+     	 
 	  <span><font class="auto-style8">Program Committees</font></span><span><br>
 	  
  <font class="style18">
@@ -347,10 +354,12 @@ DIV.Section1 {
 
 	  </span>
 
-<span class="auto-style9"><font class="auto-style8">Workshop Orginizer</font></span><span class="style18"><font class="style18"><br></font>
+<span class="auto-style9"><font class="auto-style8">Others </font></span><span class="style18"><font class="style18"><br></font>
 
 
-          <li> <a href="http://intractability2013.workshop.org.il/">Modeling Intractability workshop 2013</a><br></li>
+          <li> Co-organising <a href="http://www.cs.tau.ac.il/cseminar/">The Greater Tel Aviv Area Cryptography Seminar (GTACS)</a><br></li>
+
+          <li> Co-organised <a href="http://intractability2013.workshop.org.il/">Modeling Intractability workshop 2013</a><br></li>
 
 		 
 		 
