--- a/Courses/FOC/Spring13/schedule.html
+++ b/Courses/FOC/Spring13/schedule.html
@@ -55,8 +55,9 @@
 <tr>
 <td style="width: 7%">1</td>
 <td style="width: 14%">Feb 26. 1</td>
-<td>Introduction; Administrativia and course topics [<a href="Slides/Introduction_admin.pdf" target="_blank">slides</a>] 
-and , basic notations and One-Way Functions <br />
+<td>Introduction; Administrativia and course topics [<a href="Slides/Introduction_admin.pdf" target="_blank">Slides</a>] 
+and <br />
+basic notations and One-Way Functions
 [<a href="Slides/OWF_Slides.pdf" target="_blank">Slides</a>] [<a href="Printouts/OWF_PO.pdf" target="_blank">PO</a>]</td>
 </tr>
 
@@ -96,7 +97,8 @@ and , basic notations and One-Way Functions <br />
 <tr>
 <td style="width: 7%">7</td>
 <td style="width: 14%">April 9</td>
-<td>Hardcore Predicates&nbsp; </td>
+<td>Hardcore Predicates&nbsp; [<a href="Slides/HardCorePredicates_slides.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/HardCorePredicates_HO.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
