--- a/Courses/FOC/Spring13/schedule.html
+++ b/Courses/FOC/Spring13/schedule.html
@@ -110,7 +110,8 @@ basic notations and One-Way Functions
 <tr>
 <td style="width: 7%">9</td>
 <td style="width: 14%">April 23</td>
-<td>Pseudorandom Functions</td>
+<td>Pseudorandom Functions [<a href="Slides/Pseudorandomfunctions_Slides.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Pseudorandomfunctions_HO.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
