--- a/Courses/FOC/Spring13/sets.html
+++ b/Courses/FOC/Spring13/sets.html
@@ -23,7 +23,10 @@
 <h1>Probelm Sets</h1>
 
  <ol>
-<li> PS1 will be out on March 12 (due date two weeks)</ol>
+<li> <a href="ProblemSets/PS1.pdf">PS1</a> ,
+<a href="SolvedExe/PS1_Solution.pdf">Soution (By Nissan Levi</a>) 
+	 <li> <a href="ProblemSets/PS2.pdf">PS2</a> Due date <strong>May 7</strong> 
+	 (in two weeks)</ol>
 
 
 
