--- a/Courses/FOC/Spring13/schedule.html
+++ b/Courses/FOC/Spring13/schedule.html
@@ -117,13 +117,14 @@ basic notations and One-Way Functions
 <tr>
 <td style="width: 7%">10</td>
 <td style="width: 14%">April&nbsp; 30</td>
-<td>Commitment Schemes and Zero Knowledge for NP&nbsp;&nbsp;</td>
+<td>MACs and Signature Schemes&nbsp; [<a href="Slides/MacsAndSignatures_Slides.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/MacsAndSignatures_HO.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
 <td style="width: 7%">11</td>
 <td style="width: 14%">May 7</td>
-<td>Non Interactive Zero Knowledge&nbsp; </td>
+<td>Commitment Schemes and Zero Knowledge for NP&nbsp;&nbsp; </td>
 </tr>
 
 <tr>
@@ -135,7 +136,7 @@ basic notations and One-Way Functions
 	<tr>
 <td style="width: 7%">13</td>
 <td style="width: 14%">May 21</td>
-<td>MACs and Signature Schemes</td>
+<td>Non Interactive Zero Knowledge&nbsp; </td>
 	</tr>
 
 <tr>
