--- a/Courses/FOC/Spring13/schedule.html
+++ b/Courses/FOC/Spring13/schedule.html
@@ -124,7 +124,7 @@ basic notations and One-Way Functions
 <tr>
 <td style="width: 7%">11</td>
 <td style="width: 14%">May 7</td>
-<td>Commitment Schemes and Zero Knowledge for NP&nbsp;&nbsp; </td>
+<td>Interactive Proof and Zero Knowledge </td>
 </tr>
 
 <tr>
@@ -136,30 +136,30 @@ basic notations and One-Way Functions
 	<tr>
 <td style="width: 7%">13</td>
 <td style="width: 14%">May 21</td>
-<td>Non Interactive Zero Knowledge&nbsp; </td>
+<td>Commitment Schemes and Zero Knowledge for NP&nbsp;</td>
 	</tr>
 
 <tr>
 <td style="width: 7%">14</td>
 <td style="width: 14%">May 28</td>
-<td>Encryption Schemes &nbsp;</td>
+<td>Non Interactive Zero Knowledge&nbsp;&nbsp;&nbsp; &nbsp;</td>
 </tr>
 
 <tr>
 <td style="width: 7%">15</td>
 <td style="width: 14%">June 4</td>
-<td>Encryption Schemes cont. </td>
+<td>Encryption Schemes </td>
 </tr>
 <tr>
 <td style="width: 7%">16</td>
 <td style="width: 14%">June 11</td>
-<td>Secure Computation&nbsp; </td>
+<td>Encryption Schemes&nbsp;cont.</td>
 </tr>
 
 <tr>
 <td style="width: 7%">17</td>
 <td style="width: 14%">June 18</td>
-<td>To be announced</td>
+<td>Secure Computation</td>
 </tr>
 
 <tr>
