--- a/Courses/FOC/Spring13/schedule.html
+++ b/Courses/FOC/Spring13/schedule.html
@@ -124,7 +124,8 @@ basic notations and One-Way Functions
 <tr>
 <td style="width: 7%">11</td>
 <td style="width: 14%">May 7</td>
-<td>Interactive Proof and Zero Knowledge </td>
+<td>Interactive Proofs and Zero Knowledge [<a href="Slides/InteractiveProofs_Slides.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/InteractiveProofs_HO.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
@@ -136,7 +137,9 @@ basic notations and One-Way Functions
 	<tr>
 <td style="width: 7%">13</td>
 <td style="width: 14%">May 21</td>
-<td>Commitment Schemes and Zero Knowledge for NP&nbsp;</td>
+<td>Commitment Schemes [<a href="Slides/Commitments_Slides.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Commitments_HO.pdf" target="_blank">PO</a>] and Zero Knowledge for NP&nbsp;[<a href="Slides/InteractiveProofs_Slides.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/InteractiveProofs_HO.pdf" target="_blank">PO</a>]</td>
 	</tr>
 
 <tr>
