--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@ in Reverse Chronological Order</font></h1>
 
 <li>
 					<p>Itay Berman and Iftach Haitner and&nbsp; Ilan Komargodski 
-					and&nbsp; Moni Naor<br>
+					and&nbsp; <a href="http://www.wisdom.weizmann.ac.il/~naor/">Moni Naor</a><br>
 					<strong>Hardness Preserving Reductions via Cuckoo Hashing </strong>
 					<span class="style14"><strong><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-Cuckoo')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;<span class="style11"><img height="11" src="new.gif" width="28"></span></span></span></strong><br>
 					TCC 2013 <span style="font-weight: 400;"> 
