--- a/Courses/FOC/Spring13/index.html
+++ b/Courses/FOC/Spring13/index.html
@@ -40,7 +40,7 @@
 
 <b>Instructor:</b> <a href="http://www.cs.tau.ac.il/~iftachh" target="_blank">Iftach Haitner</a> | Schreiber 20<br /><br />
 
-<b>Reception:</b> Sundays 9:00-10:00 (please coordinate via email in advance)<br />
+<b>Reception:</b> Sundays 9:00-10:00 (please coordinate via email)<br />
 
 <p><b>Abstract:</b> This is a a graduate-level introduction to the theoretical foundations of Cryptography. We'll study the basic cryptographic primitives (e.g., one-way functions and pseudorandom generators) while focusing on formal definitions and rigorous proofs. Some more advanced topics will be also touched upon.       </p>
  <b> <br />
@@ -48,12 +48,17 @@
 	 <span class="auto-style1">Announcements</span></b> <br />
 
  <ol>
-  <li>The website of the Greater Tel-Aviv Area Crypto seminar (GTACS) can be found 
+  <li><span class="auto-style1">The website of the <strong>Greater Tel-Aviv Area Crypto seminar
+  </strong>(GTACS) can be found 
   <a href="http://www.cs.tau.ac.il/cseminar/">here</a>.</li>
   <li> <strong><span class="auto-style2">No class </span></strong>&nbsp;next 
 	 Tuesday&nbsp; (March 5).</li>
-	 <li> <a href="ProblemSets/PS1.pdf">PS1</a> is out, due date April 2 (in 
-	 class)&nbsp; . </li>
+	 <li> <a href="ProblemSets/PS1.pdf">PS1</a> is out, due date <strong>April 2
+	 </strong>&nbsp;</li>
+	 <li> <a href="ProblemSets/PS2.pdf">PS2</a> <span class="auto-style1">is out, due date 
+	 </span><strong>May 7</strong></li>
+	 <li> <a href="ProblemSets/PS3.pdf">PS3</a> is out, due date </span> <strong>
+	 <span class="auto-style1">June 4</span></strong> </li>
      </ol>
 
 </div>
