--- a/Courses/FOC/Spring13/schedule.html
+++ b/Courses/FOC/Spring13/schedule.html
@@ -145,7 +145,8 @@ basic notations and One-Way Functions
 <tr>
 <td style="width: 7%">14</td>
 <td style="width: 14%">May 28</td>
-<td>Non Interactive Zero Knowledge&nbsp;&nbsp;&nbsp; &nbsp;</td>
+<td>Non Interactive Zero Knowledge&nbsp;&nbsp;[<a href="Slides/NIZK_Slides.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/NIZK_PO.pdf" target="_blank">PO</a>] &nbsp;</td>
 </tr>
 
 <tr>
