--- a/index.html
+++ b/index.html
@@ -354,6 +354,9 @@ DIV.Section1 {
 
           <li> <a href="http://intractability2013.workshop.org.il/">Modeling Intractability workshop 2013</a><br></li>
 
+          <li> Head of the school <a href="http://www.cs.tau.ac.il/MScExcellence_TASHAD.htm">Excellence Program for Master Studies</a><br></li>
+		 
+		 
 		 
 		 
 		 </div>
