--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@ DIV.Section1 {
 
 	  [<a href="javascript:MySwitch('ProActiv','Info','Bio','OtherA')">Proffestional Activity</a>]
 
-     [<a href="javascript:MySwitch('OtherA','Info','Bio','ProActiv')">Other</a>]
+     [<a href="javascript:MySwitch('OtherA','Info','Bio','ProActiv')">School 
+	  Activity</a>]
 
 
 	  <span><div class="box" id="Bio" style="border-style: solid; border-width: 1px; padding: 5px 4px; display: none; background-color: rgb(255, 255, 255);">
@@ -354,12 +355,21 @@ DIV.Section1 {
 
           <li> <a href="http://intractability2013.workshop.org.il/">Modeling Intractability workshop 2013</a><br></li>
 
-          <li> Head of the school <a href="http://www.cs.tau.ac.il/MScExcellence_TASHAD.htm">Excellence Program for Master Studies</a><br></li>
+         
+		 
+		 
+		 
+		 </span>
+<br>
+
+
+
+                  
 		 
 		 
 		 
 		 
-		 </div>
+		 </div></span>
 
 
 <span><div class="box" id="OtherA" style="border-style: solid; border-width: 1px; padding: 5px 4px; display: none; background-color: rgb(255, 255, 255);">
@@ -367,7 +377,7 @@ DIV.Section1 {
 		</span>
 
 
-
+     <li><a href="http://www.cs.tau.ac.il/MScExcellence_TASHAD.htm">Excellence Program for Master Studies</a><br></li>
 	    </div>
 
 
