--- a/Courses/FOC/Spring13/index.html
+++ b/Courses/FOC/Spring13/index.html
@@ -59,6 +59,8 @@
 	 </span><strong>May 7</strong></li>
 	 <li> <a href="ProblemSets/PS3.pdf">PS3</a> is out, due date </span> <strong>
 	 <span class="auto-style1">June 4</span></strong> </li>
+	 <li> <span lang="he"><span class="auto-style1">Posted solution for sets 1 
+	 and 2 (by Nissan)</span></span></li>
      </ol>
 
 </div>
