--- a/Courses/FOC/Spring13/sets.html
+++ b/Courses/FOC/Spring13/sets.html
@@ -23,10 +23,11 @@
 <h1>Probelm Sets</h1>
 
  <ol>
-<li> <a href="ProblemSets/PS1.pdf">PS1</a> ,
+<li> <a href="ProblemSets/PS1.pdf">PS1</a>,
 <a href="SolvedExe/PS1_Solution.pdf">Soution (By Nissan Levi</a>) 
-	 <li> <a href="ProblemSets/PS2.pdf">PS2</a> Due date <strong>May 7</strong> 
-	 (in two weeks)<li> <a href="ProblemSets/PS3.pdf">PS3</a> Due date <strong>
+	 <li> <a href="ProblemSets/PS2.pdf">PS2</a>,
+	 <a href="SolvedExe/PS2_Solution.pdf">Soution (By Nissan Levi</a>) 
+	 <li> <a href="ProblemSets/PS3.pdf">PS3</a> Due date <strong>
 	 June 4</strong> 
 	 (in two weeks)</ol>
 
