--- a/Courses/FOC/Spring13/schedule.html
+++ b/Courses/FOC/Spring13/schedule.html
@@ -152,7 +152,8 @@ basic notations and One-Way Functions
 <tr>
 <td style="width: 7%">15</td>
 <td style="width: 14%">June 4</td>
-<td>Encryption Schemes </td>
+<td>Encryption Schemes &nbsp;[<a href="Slides/Encryption_Slides.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Encryption_PO.pdf" target="_blank">PO</a>] &nbsp;</td>
 </tr>
 <tr>
 <td style="width: 7%">16</td>
