--- a/Courses/FOC/Spring13/index.html
+++ b/Courses/FOC/Spring13/index.html
@@ -61,6 +61,8 @@
 	 <span class="auto-style1">June 4</span></strong> </li>
 	 <li> <span lang="he"><span class="auto-style1">Posted solution for sets 1 
 	 and 2 (by Nissan)</span></span></li>
+	 <li> <span class="auto-style1"><a href="ProblemSets/PS4.pdf">PS4</a> is out, due date </span> <strong>
+	 <span class="auto-style1">June 18</span></strong> </li>
      </ol>
 
 </div>
