--- a/Courses/FOC/Spring13/sets.html
+++ b/Courses/FOC/Spring13/sets.html
@@ -29,6 +29,9 @@
 	 <a href="SolvedExe/PS2_Solution.pdf">Soution (By Nissan Levi</a>) 
 	 <li> <a href="ProblemSets/PS3.pdf">PS3</a> Due date <strong>
 	 June 4</strong> 
+	 <li> <span class="auto-style1">
+	 <a href="file:///D:/Users/iftachh/HPage/Courses/FOC/Spring13/ProblemSets/PS4.pdf">
+	 PS4</a> </span>&nbsp;Due date <strong>June </strong>18 
 	 (in two weeks)</ol>
 
 
