--- a/Courses/FOC/Spring13/sets.html
+++ b/Courses/FOC/Spring13/sets.html
@@ -30,8 +30,7 @@
 	 <li> <a href="ProblemSets/PS3.pdf">PS3</a> Due date <strong>
 	 June 4</strong> 
 	 <li> <span class="auto-style1">
-	 <a href="file:///D:/Users/iftachh/HPage/Courses/FOC/Spring13/ProblemSets/PS4.pdf">
-	 PS4</a> </span>&nbsp;Due date <strong>June </strong>18 
+	 <a href="ProblemSets/PS4.pdf">PS4</a> </span>&nbsp;Due date <strong>June </strong>18 
 	 (in two weeks)</ol>
 
 
