--- a/Courses/FOC/Spring13/schedule.html
+++ b/Courses/FOC/Spring13/schedule.html
@@ -158,13 +158,14 @@ basic notations and One-Way Functions
 <tr>
 <td style="width: 7%">16</td>
 <td style="width: 14%">June 11</td>
-<td>Encryption Schemes&nbsp;cont.</td>
+<td>Encryption Schemes&nbsp;cont. and Secure Computation [<a href="Slides/SecureComp_Slides.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/SecureComp_PO.pdf" target="_blank">PO</a>] &nbsp;</td>
 </tr>
 
 <tr>
 <td style="width: 7%">17</td>
 <td style="width: 14%">June 18</td>
-<td>Secure Computation</td>
+<td>?</td>
 </tr>
 
 <tr>
