--- a/Courses/FOC/Spring13/sets.html
+++ b/Courses/FOC/Spring13/sets.html
@@ -27,11 +27,11 @@
 <a href="SolvedExe/PS1_Solution.pdf">Soution (By Nissan Levi</a>) 
 	 <li> <a href="ProblemSets/PS2.pdf">PS2</a>,
 	 <a href="SolvedExe/PS2_Solution.pdf">Soution (By Nissan Levi</a>) 
-	 <li> <a href="ProblemSets/PS3.pdf">PS3</a> Due date <strong>
-	 June 4</strong> 
+	 <li> <a href="ProblemSets/PS3.pdf">PS3</a>,
+	 <a href="SolvedExe/PS3_Solution.pdf">Soution (By Nissan Levi</a>) 
 	 <li> <span class="auto-style1">
-	 <a href="ProblemSets/PS4.pdf">PS4</a> </span>&nbsp;Due date <strong>June </strong>18 
-	 (in two weeks)</ol>
+	 <a href="ProblemSets/PS4.pdf">PS4</a>, <a href="SolvedExe/PS4_Solution.pdf">Soution (By Nissan Levi</a>) 
+	 </span></ol>
 
 
 
