--- a/index.html
+++ b/index.html
@@ -766,7 +766,13 @@ or alternatively a black-box use of lower-level primitives such as enhanced trap
 					Generators from One-way Functions<span class="style14">&nbsp; <span style="font-weight: 400;">[<a href="javascript:toggle('abstract-HillRevisted')">Abstract</a>] 
 		  		  </span> <br><span style="font-weight: 400;"><span dir="LTR" class="style14"> <span dir="LTR">
 					<span class="style5">SIAM 
-		  Journal of Computing 2013</span></span></span></span><br>Annual ACM Symposium on Theory of Computing (STOC), 2010</span> <span class="style14"><span style="font-weight: 400;"><span dir="LTR" class="style14">
+		  Journal of Computing 2013
+		  <span dir="LTR" style="font-weight: 400">
+		  <b><span dir="LTR" style="font-weight: 400;"> <span style="color: blue;">
+		  		    <a class="style5" href="http://epubs.siam.org/doi/abs/10.1137/100814421">[link]</a><i> 
+		  <o:p></o:p>
+		  		  </i>
+		  </span></span></b></span></span></span></span></span><br>Annual ACM Symposium on Theory of Computing (STOC), 2010</span> <span class="style14"><span style="font-weight: 400;"><span dir="LTR" class="style14">
 					<a href="papers/HillRevisted/HillRevisted_STOC.pdf">[PDF]</a></span></span><span dir="LTR"><a href="papers/FindingCollisions/FindingCollisions.ps"></a></span></span><span style="font-weight: 400;"><span class="style14"><span dir="LTR" class="style14"><br>Draft of full version
 					<a href="papers/HillRevisted/HillRevisted_Full.pdf">[PDF]</a> <span dir="LTR"><span style="color: blue;"> 
 		  		  <b>
