--- a/index.html
+++ b/index.html
@@ -225,10 +225,11 @@ DIV.Section1 {
 	  <span class="style11" style="">
 	  <span class="style5">
 
-	  I am a member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. Untill July 2010,
-      I was a postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
-	  Research New England</a>.<br>
-      My main research interests are
+	  I am a&nbsp; faculty member at the <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>.&nbsp; 
+	  I am a member at the <a href="http://www.icore-algo.org.il/">Israeli 
+	  Center of Research Excellence in Algorithms (ICORE)</a> and the
+	  <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for Information 
+	  Security</a>.<br>My main research interests are
 	  Cryptography and Computational Complexity.<br>
 
     [<span><a href="javascript:MySwitch('Info','Bio','OtherA','ProActiv')">Contact Info</a></span>]
@@ -250,10 +251,12 @@ DIV.Section1 {
 
 
 	    <span class="style21">
-	  <span style="font-weight: 400;"><span class="style4">I am a member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. Untill July 2010,
-      I was a postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
-	  Research New England</a>.<br> Prior to the time at Microsoft Research, I did a six
-		months postdoc at <a href="http://www.cs.haifa.ac.il/"><font>Department
+	  <span style="font-weight: 400;"><span class="style4">I am a member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. I am a member at the <a href="http://www.icore-algo.org.il/">Israeli 
+	  Center of Research Excellence in Algorithms (ICORE)</a> and the <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for Information Security.</a><br>
+
+	  
+	  Untill July 2010, I was a postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
+	  Research New England</a>. Prior to the time at Microsoft Research, I did a six months postdoc at <a href="http://www.cs.haifa.ac.il/"><font>Department
 		of Computer Science, University of Haifa</font></a>, hosted by <a href="http://cs.haifa.ac.il/%7Eronen/">
 		Ronen shaltiel</a></span><span class="style8" style="">.
 		I received my PhD in 2008 from the
@@ -275,10 +278,27 @@ DIV.Section1 {
 
 	      </span>
 
+
+      <span class="auto-style9"><font class="auto-style8">Grants</font></span><span class="style18"><font class="style18"><br></font>
+	  <font class="style18">
+
+      <li>[2011-2015] Israel Science Foundation(ISF) -- Individual research grant. </li>
+       <li>[2011-2015] Israel Science Foundation (ISF) -- Equipment for new faculty. </li>
+
+ <li>[2011-2015] Israel Science Foundation(ISF) -- Israeli Center of Research Excellence in Algorithms. </li>
+ <li>[2011-2015] US-Israel Binational Science Foundation (BSF), with Salil Vadhan.</li>
+
+
+<br>
+
 	     <span class="auto-style9"><font class="auto-style8">Awards and Fellowships</font></span><span class="style18"><font class="style18"><br></font>
 	  <font class="style18">
+	  
 	  <li>
-
+      [2011] One of the three winning papers of the 2011 SIAM Outstanding Paper Prizes. The prizes are given for outstanding papers published in SIAM journals during the three years prior to the year of the award.
+	   
+	  </li> <li>
+      
 	  [2008] The John F. Kennedy Prize (awarded by the
 	  Weizmann Institute)  </li>
 	  <li>
