--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ DIV.Section1 {
      <font class="auto-style9">School Activity</font> <br><br>
 
 
-     <li><a href="http://www.cs.tau.ac.il/MScExcellence_TASHAD.htm">Excellence Program for Master Studies</a><br></li>
+     <li><a href="http://www.cs.tau.ac.il/MSCX_program/mscx.htm">Excellence Program for Master Studies</a><br></li>
 	    </div>
 
 
