--- a/Courses/Seminars/Pseudorandomness/Fall13.html
+++ b/Courses/Seminars/Pseudorandomness/Fall13.html
@@ -1545,7 +1545,7 @@ schedule<br><br></big>
       16/10</td>
         <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215)  0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign
- ="top" width="491">&nbsp;</td>
+ ="top" width="491" class="auto-style3">Dor Cohen</td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491">
@@ -1569,7 +1569,7 @@ schedule<br><br></big>
       <span style="FONT-FAMILY: 'Tahoma','sans-serif'"><o:p></o:p></span> </td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(250,191,143) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign
- ="top" width="491">&nbsp;</td>
+ ="top" width="491" class="auto-style3">Barak Gross</td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(250,191,143) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491">
@@ -1627,7 +1627,7 @@ Algorithms and Complexity Classes <br>
       <td
  style="padding: 0cm 5.4pt; WIDTH: 13cm; BACKGROUND: rgb(250,191,143) 0% 50%; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial; height: 42px; border-left-style: none; border-left-color: inherit; border-left-width: medium; border-right-style: solid; border-right-color: inherit; border-right-width: 1pt; border-top-style: none; border-top-color: inherit; border-top-width: medium; border-bottom-style: solid; border-bottom-color: inherit; border-bottom-width: 1pt;" valign
  ="top" width="491" class="auto-style3">
-      &nbsp;</td>
+      <font face="Verdana">Kedem Yekirevich &amp; Adar Zeitak</font></td>
       <td
  style="padding: 0cm 5.4pt; WIDTH: 13cm; BACKGROUND: rgb(250,191,143) 0% 50%; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial; height: 42px; border-left-style: none; border-left-color: inherit; border-left-width: medium; border-right-style: solid; border-right-color: inherit; border-right-width: 1pt; border-top-style: none; border-top-color: inherit; border-top-width: medium; border-bottom-style: solid; border-bottom-color: inherit; border-bottom-width: 1pt;" valign
  ="top" width="491">
@@ -1653,7 +1653,7 @@ Algorithms and Complexity Classes <br>
        <td
  style="padding: 0cm 5.4pt; WIDTH: 13cm; BACKGROUND: rgb(149,179,215); -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial; height: 42px; border-left-style: none; border-left-color: inherit; border-left-width: medium; border-right-style: solid; border-right-color: inherit; border-right-width: 1pt; border-top-style: none; border-top-color: inherit; border-top-width: medium; border-bottom-style: solid; border-bottom-color: inherit; border-bottom-width: 1pt;" valign
  ="top" width="491" class="auto-style3">
-       &nbsp;</td>
+       Felix Groover &amp; Or Fischer</td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; VERTICAL-ALIGN: top; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" 
      >
@@ -1704,7 +1704,11 @@ Techniques <br>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(250,191,143)0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491">
-      &nbsp;</td>
+      <div class="auto-style3">
+		  Daniel Rosen &amp; Itay Caryzler</div>
+	  <div class="Iyc d-k-l">
+	  </div>
+		</td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(250,191,143)0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491" class="auto-style1"><span style="COLOR: black" lang="EN-US">Basic
@@ -1724,9 +1728,9 @@ Derandomization Techniques (cont.)<br>
      ><span dir="rtl" class="auto-style1" >4/12</span></td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
- ="top" width="491">
+ ="top" width="491" class="auto-style3">
  	 </span>
-      </td>
+      &nbsp;Eyal Golombok &amp; Yuval Levi</td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491" class="auto-style1"><span style="COLOR: black">Pairwise and
