--- a/Courses/Seminars/Pseudorandomness/Fall13.html
+++ b/Courses/Seminars/Pseudorandomness/Fall13.html
@@ -1595,9 +1595,9 @@ Algorithms and Complexity Classes <br>
 
        <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215)  0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign
- ="top" width="491">
+ ="top" width="491" class="auto-style3">
 	  <o:p><font
-      ><span class="auto-style5"></span><span class="auto-style1">&nbsp;</span></font></o:p></td>
+      ><span class="auto-style5"></span><span class="auto-style1">&nbsp;Daniel Rosen &amp; Itay Caryzler</span></font></o:p></td>
 
 
 
@@ -1705,7 +1705,7 @@ Techniques <br>
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(250,191,143)0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491">
       <div class="auto-style3">
-		  Daniel Rosen &amp; Itay Caryzler</div>
+		  </div>
 	  <div class="Iyc d-k-l">
 	  </div>
 		</td>
