--- a/Courses/Seminars/Pseudorandomness/Fall13.html
+++ b/Courses/Seminars/Pseudorandomness/Fall13.html
@@ -1752,9 +1752,9 @@ k-wise <st1:place w:st="on"><st1:city w:st="on">Independence<br></st1:city></st1
       <td
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(250,191,143) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
- ="top" width="491">
+ ="top" width="491" class="auto-style3">
       </span>
- </td>
+ 	 Chen Liraz &amp; Nir Aviv</td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(250,191,143) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491" class="auto-style1">
