--- a/Courses/Seminars/Pseudorandomness/Fall13.html
+++ b/Courses/Seminars/Pseudorandomness/Fall13.html
@@ -1706,8 +1706,8 @@ Techniques <br>
  ="top" width="491">
       <div class="auto-style3">
 		  </div>
-	  <div class="Iyc d-k-l">
-	  </div>
+	  <div class="auto-style3">
+	  	Shelly Nagar &amp; Ofir Avramov</div>
 		</td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(250,191,143)0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
