--- a/Courses/Seminars/Pseudorandomness/Fall13.html
+++ b/Courses/Seminars/Pseudorandomness/Fall13.html
@@ -1420,6 +1420,12 @@ table.MsoTableGrid
 }
 
 
+.auto-style19 {
+	font-size: larger;
+	text-align: center;
+}
+
+
 </style>
 
 
@@ -1775,8 +1781,8 @@ k-wise <st1:place w:st="on"><st1:city w:st="on">Independence<br></st1:city></st1
      ><span dir="rtl" class="auto-style1" >18/12</span></td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
- ="top" width="491" class="auto-style1">
-      &nbsp;</td>
+ ="top" width="491" class="auto-style19">
+      Nissan Levi</td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491" class="auto-style1"><span style="COLOR: black">Random Walks on
@@ -1795,9 +1801,9 @@ Expanders<br>
      ><span dir="rtl" class="auto-style1" >25/12</span></td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(250,191,143) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign
- ="top" width="491"><br>
+ ="top" width="491" class="auto-style3"><br>
 		</span>
-		</td>
+		Yinathan Evron</td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(250,191,143) 0% 50%; VERTICAL-ALIGN: middle; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" class="auto-style1"
      >
@@ -1817,9 +1823,9 @@ Expanders<br>
      ><span dir="rtl" class="auto-style1" >1/1</span></td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215)  0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
- ="top" width="491"><br>
+ ="top" width="491" class="auto-style3"><br>
       </span>
-      </td>
+      Itay Berman</td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215)  0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491" class="auto-style1">
@@ -1839,7 +1845,7 @@ Expanders<br>
      ><span dir="rtl" class="auto-style1" >8/1</span></td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(250,191,143) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
- ="top" width="491"><br>
+ ="top" width="491" class="auto-style3">Aviv Nir<br>
       </span>
       </td>
       <td
@@ -1859,8 +1865,10 @@ Expanders<br>
      ><span dir="rtl" class="auto-style1" >15/1</span></td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
- ="top" width="491"> <br class="auto-style1">
-      </td>
+ ="top" width="491" class="auto-style3"> <br class="auto-style1">
+      Idan Golomb &amp;
+	  <a class="wta" href="https://plus.google.com/u/0/111870058229726475696?prsrc=4" o="111870058229726475696" target="_blank">
+	  Assa Naveh</a></td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND:  rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491" class="auto-style1"><span style="COLOR: black" lang="EN-US">Pseudorandom Generators (cont.) <br>
