--- a/Courses/Seminars/Pseudorandomness/Fall13.html
+++ b/Courses/Seminars/Pseudorandomness/Fall13.html
@@ -1882,8 +1882,7 @@ Expanders<br>
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215)  0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491" class="auto-style3"><br class="auto-style5">
       <span class="auto-style5">
-      </span>
-      Itay Berman</span></td>
+      Itay Berman</span></span></td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215)  0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491" class="auto-style5">
@@ -1904,7 +1903,7 @@ Expanders<br>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(250,191,143) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491" class="auto-style3"><br class="auto-style5">
-	  <span class="auto-style5">Aviv Nir<br>
+	  <span class="auto-style5">Idan Golomb<br>
       </span>
       </td>
       <td
@@ -1925,7 +1924,7 @@ Expanders<br>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND: rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491" class="auto-style3"> <br class="auto-style5">
-      <span class="auto-style5">Idan Golomb &amp; Assa Naveh</span></td>
+      <span class="auto-style5">&nbsp; Assa Naveh</span></td>
       <td
  style="BORDER-BOTTOM: 1pt solid; BORDER-LEFT: medium none; PADDING-BOTTOM: 0cm; PADDING-LEFT: 5.4pt; WIDTH: 13cm; PADDING-RIGHT: 5.4pt; BACKGROUND:  rgb(149,179,215) 0% 50%; BORDER-TOP: medium none; BORDER-RIGHT: 1pt solid; PADDING-TOP: 0cm; -moz-background-clip: -moz-initial; -moz-background-origin: -moz-initial; -moz-background-inline-policy: -moz-initial" valign  
  ="top" width="491" class="auto-style5"><span style="COLOR: black" lang="EN-US">Pseudorandom Generators (cont.) <br>
