--- a/index.html
+++ b/index.html
@@ -447,6 +447,8 @@ DIV.Section1 {
 
     <tr>  <td align="left">
  	   <span class="style16" ><b>Teaching </b><br> <span class="auto-style6">
+		<a <font="" href="Courses/Seminars/Pseudorandomness/Fall13.html" size="2">
+		Seminar on Pseudorandomness (Fall 13)</a>,
 		<a <font="" href="http://tau-cm2013.wikidot.com/" size="2">Computational 
 		Model (Spring 13)</a>,
 		<a <font="" href="Courses/FOC/Spring13/index.html" size="2">Foundation 
